tests/baselines/reference/moduleResolutionWithoutExtension3.errors.txt
error TS4124: Compiler option 'module' of value 'nodenext' is unstable. Use nightly TypeScript to silence this error. Try updating with 'npm install -D typescript@next'.
/src/bar.mts(2,21): error TS2835: Relative import paths need explicit file extensions in EcmaScript imports when '--moduleResolution' is 'node12' or 'nodenext'. Did you mean './foo.jsx'?


!!! error TS4124: Compiler option 'module' of value 'nodenext' is unstable. Use nightly TypeScript to silence this error. Try updating with 'npm install -D typescript@next'.
==== /src/foo.tsx (0 errors) ====
    export function foo() {
        return "";
    }
    
==== /src/bar.mts (1 errors) ====
    // Extensionless relative path ES import in an ES module
    import { foo } from "./foo"; // should error, suggest adding ".jsx"
                        ~~~~~~~
!!! error TS2835: Relative import paths need explicit file extensions in EcmaScript imports when '--moduleResolution' is 'node12' or 'nodenext'. Did you mean './foo.jsx'?
    